opam-version: "1.2"

maintainer: "Julien Sagot <ju.sagot@gmail.com>"

authors: [ "Julien Sagot <ju.sagot@gmail.com>" ]

name: "gpx"

version: "1.1.1"

homepage: "http://sagotch.github.io/ocaml-gpx/"

dev-repo: "https://github.com/sagotch/ocaml-gpx.git"

bug-reports: "http://github.com/sagotch/ocaml-gpx/issues"

license: "MIT"

available: [ ocaml-version >= "4.02" ]

build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

depends: [ "xml-light"
           "ISO8601"
           "dune"
           "re" {with-test & (>= "1.7.2")}
           "alcotest" {with-test} ]
